<resources>
    <string name="app_name">PRM1</string>
    <string name="addDebt">Add debt</string>
    <string name="debtName">name</string>
    <string name="amount">amount</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="deleteConfirm">Are you sure?</string>
    <string name="confirm">ok</string>
    <string name="decline">cancel</string>
    <string name="simulate">simulate</string>
    <string name="notfiy">send notification</string>
    <string name="rate">return rate per second</string>
    <string name="interest">interest %</string>
    <string name="startStop">Start/Stop</string>
    <string name="simRunning">simulation is currently running</string>
    <string name="simAborted">simulation has been stopped</string>
    <string name="simEnded">Simulation has ended. Total interests: %s</string>
    <string name="debtReminder">Could you kindly return your loan? Value: %s PLN</string>
    <string name="debtReminderTitle">Send reminder</string>
    <string name="totalAmount">Total amount of debts: %s PLN</string>
</resources>
